--- a/admin/style.css
+++ b/admin/style.css
@@ -346,8 +346,8 @@ body {
     border-radius: 11px;
 }
 .product-item img {
-    max-width: 150px;
-    max-height: 150px;
+    width: 150px;
+    height: 150px;
     border-radius: 10px;
 }
 
